# requiem

./: .mcp.json  404.html  CHANGELOG.md  CLAUDE.md  CODE-REVIEW.md  Cargo.toml  README.md  TASKS.md  configuration.html  deny.toml  maintaining.html  print.html  requirements-gap-analysis-2025-11-14.md  requirements.html  searchindex.js  toc.html  toc.js  working-with-requirements.html
.claude/agents/: requirements-guardian.md  rust-code-reviewer.md  technical-docs-architect.md
.github/workflows/: CI.yml  book.yml  deploy-docs-latest.yml  deploy-docs-version.yml
.target-check/: .rustc_info.json
.target-check/debug/.fingerprint/autocfg-e43f4f6a57543659/: output-lib-autocfg
.target-check/debug/.fingerprint/cfg-if-0d06577c98329a83/: output-lib-cfg_if
.target-check/debug/.fingerprint/crossbeam-utils-90212a47424a6c67/: build-script-build-script-build
.target-check/debug/.fingerprint/equivalent-e3e55a7112a7f99e/: output-lib-equivalent
.target-check/debug/.fingerprint/futures-core-b17a82b164bf052b/: output-lib-futures_core
.target-check/debug/.fingerprint/futures-sink-05ea9def2ed4c1f0/: output-lib-futures_sink
.target-check/debug/.fingerprint/hashbrown-53df1be1bb5a57db/: output-lib-hashbrown
.target-check/debug/.fingerprint/libc-500d20659087556a/: build-script-build-script-build.json
advanced/: coverage.html  cycles.html  import-export.html
benches/: add_many.rs  update_hrids.rs
configuration/: directory-structure.html
core-concepts/: change-management.html  principles.html  traceability.html
crates/req/: Cargo.toml
crates/req-core/: Cargo.toml  README.md
crates/req-core/src/: lib.rs
crates/req-mcp/: Cargo.toml  README.md
crates/req-mcp/src/: main.rs  server.rs  state.rs
crates/req/src/cli/: config.rs  create.rs  diagnose.rs  move.rs  rename.rs  status.rs
crates/req/src/cli/kind/: list.rs
docs/: book.toml  design-list-command.md  design-ssg-integration.md  design-test-traceability.md
docs/book/: 404.html  advanced.html  core-concepts.html  getting-started.html  integration.html  introduction.html  print.html  toc.html  toc.js
docs/book/configuration/: config-file.html  namespaces.html
docs/book/core-concepts/: requiem-approach.html
docs/book/getting-started/: first-project.html  installation.html  quick-start.html
docs/book/integration/: mdbook.html  sphinx.html
docs/book/maintaining/: fingerprints.html
docs/book/reference/: configuration.html
docs/book/working-with-requirements/: file-format.html  linking.html  templates.html
docs/src/: SUMMARY.md  advanced.md  configuration.md  core-concepts.md  getting-started.md  integration.md  introduction.md  maintaining.md  requirements.md  working-with-requirements.md
docs/src/advanced/: coverage.md  cycles.md  import-export.md
docs/src/configuration/: config-file.md  directory-structure.md  namespaces.md
docs/src/core-concepts/: change-management.md  principles.md  requiem-approach.md  traceability.md
docs/src/getting-started/: first-project.md  installation.md  quick-start.md
docs/src/integration/: mdbook.md  sphinx.md  version-control.md
docs/src/maintaining/: correcting-hrids.md  fingerprints.md  review-workflows.md
docs/src/reference/: cli.md  configuration.md  file-format.md
docs/src/requirements/: SPC-001.md  SPC-002.md  SPC-003.md  SPC-004.md  SPC-005.md  SPC-006.md  SYS-001.md  SYS-002.md  SYS-003.md  SYS-004.md  SYS-005.md  SYS-006.md  SYS-007.md  SYS-008.md  SYS-009.md  SYS-010.md  SYS-011.md  SYS-012.md  SYS-013.md  SYS-014.md  SYS-015.md  SYS-016.md  SYS-017.md  SYS-018.md  SYS-019.md  SYS-020.md  SYS-021.md  SYS-022.md  SYS-023.md  SYS-024.md  SYS-026.md  SYS-027.md  SYS-028.md  SYS-030.md  SYS-031.md  SYS-032.md  USR-001.md  USR-002.md  USR-003.md  USR-004.md  (+8 more)
docs/src/working-with-requirements/: creating.md  file-format.md  hrids.md  linking.md  relationships.md  templates.md
examples/mdbook/: README.md  book.toml
examples/mdbook/src/: SUMMARY.md  USR-001.md  USR-002.md
examples/sphinx/: README.md
examples/sphinx/requirements/: USR-001.md  USR-002.md
integration/: version-control.html
maintaining/: correcting-hrids.html  review-workflows.html
reference/: cli.html  configuration.html  file-format.html
req/: CHANGELOG.md  Cargo.toml  README.md
req-core/: CHANGELOG.md  Cargo.toml
req-core/benches/: add_many.rs  update_hrids.rs
req-core/src/: domain.rs  lib.rs  storage.rs
req-core/src/domain/: config.rs  hrid.rs  requirement.rs  requirement_data.rs  requirement_view.rs  tree.rs
req-core/src/domain/tree/: cycle.rs  error.rs  link.rs  suspect.rs
req-core/src/storage/: directory.rs  markdown.rs  path_parser.rs
req-core/src/storage/directory/: edit.rs  flush.rs  load.rs  maintenance.rs
req-core/src/storage/markdown/: content.rs  frontmatter.rs
req-mcp/: CHANGELOG.md  Cargo.toml  README.md
req-mcp/src/: main.rs  server.rs  state.rs  tools.rs
req-mcp/src/tools/: discovery.rs  editing.rs  lineage.rs  search.rs
req/src/: cli.rs
req/src/cli/: complete.rs  config.rs  create.rs  delete.rs  diagnose.rs  export.rs  init.rs  kind.rs  link.rs  list.rs  move.rs  rename.rs  review.rs  show.rs  status.rs  sync.rs  unlink.rs  validate.rs
req/src/cli/kind/: add.rs  list.rs  remove.rs
req/src/cli/list/: entry.rs  filter.rs  render.rs  row.rs
req/src/cli/review/: accept.rs  display.rs
req/src/cli/validate/: check.rs  fix.rs  report.rs
requirements/: system-requirements.html  user-requirements.html
src/: cli.rs  domain.rs  lib.rs  storage.rs
src/cli/: config.rs  create.rs  delete.rs  diagnose.rs  init.rs  kind.rs  link.rs  list.rs  move.rs  rename.rs  review.rs  show.rs  status.rs  sync.rs  terminal.rs  unlink.rs  validate.rs
src/cli/kind/: add.rs  list.rs  remove.rs
src/domain/: config.rs  hrid.rs  requirement.rs  requirement_data.rs  requirement_view.rs  tree.rs
src/domain/requirement/: storage.rs
src/storage/: directory.rs  markdown.rs  path_parser.rs  requirement_data.rs  requirement_view.rs  tree.rs
target-clippy/: .rustc_info.json
working-with-requirements/: creating.html  hrids.html  relationships.html
(+157 files in other folders)
