[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
petgraph = "0.8"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
schemars = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

# MCP dependencies
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Allow multiple versions of transitive dependencies
multiple-crate-versions = "allow"
