[workspace]
members = ["req", "req-core", "req-mcp"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Allow multiple versions of transitive dependencies
multiple-crate-versions = "allow"
