[package]
name = "requirements-manager-core"
description = "Core types and logic for plain-text requirements management"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["requirements", "plain-text", "management"]
categories = ["data-structures", "development-tools"]
readme = "README.md"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[lib]
name = "requiem_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
borsh = { version = "1.6.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
petgraph = "0.8"
non-empty-string = "0.2.6"
nonempty = "0.12.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.12"
toml = "0.9.2"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.8.0"
tempfile = "3.20.0"
test-case = "3.3.1"

[lints]
workspace = true

[[bench]]
name = "add_many"
harness = false

[[bench]]
name = "update_hrids"
harness = false
