[package]
name = "req-mcp"
description = "Model Context Protocol server for requirements management"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["mcp", "requirements", "server"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[[bin]]
name = "req-mcp"
path = "src/main.rs"

[dependencies]
requirements-manager-core = { path = "../req-core" }
anyhow = "1.0.98"
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
schemars = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
