[package]
name = "requirements-manager"
description = "Plain-text requirements management tool"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["requirements", "plain-text", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[[bin]]
name = "req"
path = "src/main.rs"

[dependencies]
requirements-manager-core = { path = "../req-core" }
anyhow = "1.0.101"
borsh = { version = "1.6.0", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
petgraph = "0.8"
non-empty-string = "0.2.6"
nonempty = "0.12.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
regex = "1.12.3"
serde_json = "1.0.149"
dialoguer = "0.12.0"
owo-colors = "4.1.0"
supports-color = "3.0.1"
indicatif = "0.18.4"
terminal_size = "0.4.1"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.20.0"
test-case = "3.3.1"

[lints]
workspace = true
