[package]
name = "requirements-manager"
description = "Plain-text requirements management tool"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["requirements", "plain-text", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
version = "0.1.2"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[[bin]]
name = "req"
path = "src/main.rs"

[dependencies]
requirements-manager-core = { path = "../req-core" }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
nonempty = "0.12.0"
owo-colors = "4.1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
supports-color = "3.0.1"
terminal_size = "0.4.1"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-width = "0.2.2"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
