[package]
name = "requirements-manager-core"
description = "Core types and logic for plain-text requirements management"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["requirements", "plain-text", "management"]
categories = ["data-structures", "development-tools"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "requiem_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
borsh = { version = "1.5.7", features = ["derive"] }
chrono.workspace = true
petgraph.workspace = true
non-empty-string = "0.2.6"
nonempty = "0.12.0"
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
regex = "1.11.1"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.20.0"
test-case = "3.3.1"

[lints]
workspace = true

[[bench]]
name = "add_many"
harness = false

[[bench]]
name = "update_hrids"
harness = false
