[package]
name = "req-mcp"
description = "Model Context Protocol server for requirements management"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["mcp", "requirements", "server"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "req-mcp"
path = "src/main.rs"

[dependencies]
requirements-manager-core = { path = "../req-core" }
anyhow.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true

[lints]
workspace = true
